# mod-add

./: .gitignore  README.md  pyproject.toml
configs/: circuit_sparse_mainline.json  mainline.json
scripts/: run_mainline.sh  run_sparse_mainline.sh  run_sparse_seeds.sh
src/grokking_repro/: __init__.py  data.py  fourier.py  model.py  plot.py  prune.py  sparsity.py  sweep.py  train.py  train_sparse.py  visualize_circuit.py  visualize_weights.py
