[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grokking-repro"
version = "0.1.0"
description = "Small PyTorch reproduction scaffold for modular-addition grokking."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "pandas",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

